<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JavaSyntaxHighligher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test1">Test 1</string>
    <string name="test2">Test 2</string>
    <string name="test3">Test 3</string>
    <string name="test4">Test 4</string>
    <string name="test5">Test 5</string>
    <string name="test6">Test 6</string>

</resources>